2020-09-30 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-workaround-extra-text.man: Document that
	Supermicro boards don't work with IPMI 1.5.
	
2020-09-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo

2020-09-03 Christian Ehrhardt <christian.ehrhardt@canonical.com>

	* libfreeipmi/locate/ipmi-locate-acpi-spmi.c
	(_ipmi_acpi_get_table_dev_mem): Fix segfault

2020-07-28 Albert Chu <chu11@llnl.gov>

	* man/freeipmi.conf.5.pre.in: Fix typo

2020-01-28 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
	appearing in manpage.

2020-01-07 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid number of args
	to pstdout_printf.

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	invalid output with invalid variable passed to pstdout_printf().

	* ipmi-oem/ipmi-oem-intel.c (ipmi_oem_intel_get_smtp_config): Fix
	invalid call to pstdout_printf(), forgot output parameters.

	* ipmi-oem/ipmi-oem-intelnm.c
	(_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common):
	Fix invalid call to pstdout_printf(), forgot output parameter.

	* ipmi-oem/ipmi-oem-quanta.c
	(ipmi_oem_quanta_get_processor_information): Fix invalid call to
	pstdout_printf(), forgot output parameters.

	* libipmiconsole/ipmiconsole_processing
	(_serial_keepalive_timeout): Fix bad debug trace without parameter
	for output.

	* common/toolcommon/pstdout.c (pstdout_set_debug_flags): Fix typo
	&& instead of &.

2019-11-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c
	(ipmi_sdr_parse_sensor_name, ipmi_sdr_parse_entity_sensor_name):
	Fix invalid parameter check to fix compiler warning.

2019-11-18 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru.c: Workaround unexpected completion
	code indicating no FRU data available.

2019-08-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c: Workaround Dell